[project]
authors = [
  {name = "", email = "nfilsaraee@gmail.com"},
]
dependencies = [
  "mkdocs-material>=8.2.15",
]
description = ""
name = ""
version = ""

license = {text = "MIT"}
requires-python = ">=3.8"

[project.optional-dependencies]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
     # TODO: upgrade and enable typer-cli once it supports Click 8.x.x  # "typer-cli >=0.0.12,<0.0.13",
    "typer >=0.4.1,<0.5.0",
    "pyyaml >=5.3.1,<7.0.0",
    "mkdocs-drawio-exporter>=0.8.0",
]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
  "black>=22.3.0",
]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=0.12.0"]
